--- a/resource/css/index.css
+++ b/resource/css/index.css
@@ -7,4 +7,50 @@ html {
 *::after,
 *::before {
   box-sizing: border-box;
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+#main .container-details {
+  position: relative;
+  font-size: 0;
+  height: 50vh;
+  max-height: 50vh;
+  overflow: auto;
+}
+#main .section-title {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+#main .column {
+  padding: 20px 15px;
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  font-size: 16px;
+  line-height: 24px;
+  width: 50%;
+}
+#main .line {
+  position: absolute;
+  width: 1px;
+  height: 100%;
+  background-color: #2e2e2e;
+}
+#main .container-action {
+  border: 1px solid;
+  border-color: #2e2e2e;
+  padding: 20px 15px;
+}
+#main .default-theme {
+  margin-bottom: 10px;
+  border: 1px solid;
+  border-color: #2e2e2e;
+}
+#main .default-theme summary {
+  padding: 10px;
+}
+#main .default-theme .content {
+  padding: 10px;
+  border-top: 1px solid;
+  border-top-color: #2e2e2e;
 }
