--- a/resource/less/index.less
+++ b/resource/less/index.less
@@ -4,4 +4,56 @@ body, html {
 }
 *,*::after,*::before {
   box-sizing: border-box;
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#main {
+  .container-details {
+    position: relative;
+    font-size: 0;
+    height: 50vh;
+    max-height: 50vh;
+    overflow: auto;
+  }
+  .section-title {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .column {
+    padding: 20px 15px;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    font-size: 16px;
+    line-height: 24px;
+    width: 50%;
+  }
+  .line {
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    background-color: #2e2e2e;
+  }
+
+  .container-action {
+    border: 1px solid;
+    border-color: #2e2e2e;
+    padding: 20px 15px;
+  }
+
+  .default-theme {
+    margin-bottom: 10px;
+    border: 1px solid;
+    border-color: #2e2e2e;
+    summary {
+      padding: 10px;
+
+    }
+    .content {
+      padding: 10px;
+      border-top: 1px solid;
+      border-top-color: #2e2e2e;
+    }
+  }
 }
